# DiscardAirwaveEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini
install/assets/models/intergalactic_spaceship-obj/: Intergalactic_Spaceship-(Wavefront).mtl
install/assets/models/mountain/: mount.blend1.mtl
install/assets/shaders/00/: cube.frag  cube.vert  cube_texture.frag  cube_texture.vert  triangle.frag  triangle.vert
install/assets/shaders/01/: framebuffer.frag
install/assets/shaders/shader_lib/: basic.frag  basic.vert  blinn_phong.frag  cube_texture_background.frag  cube_texture_background.vert  phong.frag  phong.vert
source/: CMakeLists.txt
source/engine/: CMakeLists.txt  airwave_engine.hpp
source/engine/core/: CMakeLists.txt
source/engine/core/application/: application.cpp  application.hpp  entry_point.hpp
source/engine/core/camera/: camera.hpp
source/engine/core/camera/controller/: fps_controller.cpp  fps_controller.hpp  trackball_controller.cpp  trackball_controller.hpp
source/engine/core/ecs/: aw_component.hpp  aw_entity.hpp  node.cpp  node.hpp  scene.cpp  scene.hpp  uuid.hpp
source/engine/core/ecs/system/: background_system.hpp  camera_system.hpp  forward_render_system.hpp  light_system.hpp  material_system.hpp  system.hpp  trackball_camera_system.hpp  transform_system.hpp
source/engine/core/render/buffer/: framebuffer.cpp  framebuffer.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
source/engine/core/render/geometry/: custom_geometry.hpp  geometry.cpp  geometry.hpp  geometry_utils.cpp  geometry_utils.hpp
source/engine/core/render/light/: light.hpp  light_manager.cpp  light_manager.hpp
source/engine/platform/: CMakeLists.txt
source/engine/platform/event/: application_event.hpp  event.hpp  event_dispatcher.cpp  event_dispatcher.hpp  event_observer.hpp  key_event.hpp  mouse_event.hpp
source/engine/platform/graphics/: graphic_contex.cpp  graphic_contex.hpp
source/engine/platform/utils/: common.hpp  file_utils.cpp  file_utils.hpp  key_codes.hpp  log.cpp  log.hpp  profiler.hpp
source/engine/platform/window/: aw_glfw_window.cpp  aw_glfw_window.hpp  aw_window.cpp  aw_window.hpp
source/sandbox/: CMakeLists.txt
source/sandbox/00_init/: 00_init.cpp  00_triangle.cpp  CMakeLists.txt
source/sandbox/00_triangle/: 00_triangle.cpp
source/sandbox/01_cube/: 01_cube.cpp  CMakeLists.txt
source/sandbox/02_texture/: 02_texture.cpp  CMakeLists.txt
source/sandbox/03_application/: 03_application.cpp  CMakeLists.txt
source/sandbox/04_geometry/: 04_geometry.cpp  CMakeLists.txt
source/sandbox/05_event/: 05_event.cpp  CMakeLists.txt
source/sandbox/06_camera/: 06_camera.cpp  CMakeLists.txt
source/sandbox/07_framebuffer/: 07_framebuffer.cpp  CMakeLists.txt
source/sandbox/08_mesh/: 08_mesh.cpp  CMakeLists.txt
source/sandbox/09_ecs/: 09_ecs.cpp  CMakeLists.txt
source/sandbox/09_light/: 09_light.cpp  CMakeLists.txt
source/sandbox/10_light/: 10_light.cpp  CMakeLists.txt
source/sandbox/10_model/: 10_model.cpp  CMakeLists.txt
source/sandbox/11_component/: 11_component.cpp  CMakeLists.txt
source/sandbox/12_model/: 12_model.cpp  CMakeLists.txt
source/sandbox/13_cube_texture/: 13_cube_texture.cpp  CMakeLists.txt
(+65 files in other folders)
