cmake_minimum_required(VERSION 3.8)

project(sandbox)

# add_subdirectory(00_triangle)
# add_subdirectory(01_cube)
# add_subdirectory(02_texture)
# add_subdirectory(03_application)
# add_subdirectory(04_geometry)
# add_subdirectory(05_event)
# add_subdirectory(06_camera)
# add_subdirectory(07_framebuffer)
# add_subdirectory(08_mesh)
# add_subdirectory(09_ecs)
# add_subdirectory(10_light)
# add_subdirectory(11_component)
add_subdirectory(12_model)